feat: CRUD tickets
